Guardando cambios acerca de la funcionalidad de crear publicaciones. Mejorando diseño del RootLayout y LeftSidebar

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/mochimap-proyecto.appspot.com/o/icons%2FlogoMochiMap_round.png?alt=media&token=ff042a50-287b-481b-9795-7823dd96a4c8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto Web</title>
+    <title>Mochimap</title>
   </head>
   <body>
     <div id="root"></div>
