cambio en img perfiles, iconos linkes, botones edit, inicio feed, personas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/mochimap-proyecto.appspot.com/o/icons%2FlogoMochiMap_round.png?alt=media&token=ff042a50-287b-481b-9795-7823dd96a4c8" />
+    <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/mochimap-proyecto.appspot.com/o/icons%2Flogorednd.png?alt=media&token=374d2b24-2cae-4728-81aa-1bdc86b8aacd" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mochimap</title>
   </head>
